<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>record_pcd</name>
  <version>4.51.1</version>
  <description>RealSense camera package allowing access to Intel T265 Tracking module and SR300 and D400 3D cameras</description>
  <maintainer email="librs.ros@intel.com">LibRealSense ROS Team</maintainer>
  <license>Apache License 2.0</license>
  
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="librs.ros@intel.com">LibRealSense ROS Team</author>
 
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_msgs</depend>

  <exec_depend>launch_ros</exec_depend>
  <build_depend>ros_environment</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
